# NexaFx-contract

./: .eslintrc.json  .gitignore  Cargo.toml  POOL_MANAGER.md  README.md  package-lock.json  package.json  something.md  test.ts  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
bindings/: package-lock.json
contracts/: .gitignore  Cargo.toml  README.md
contracts/src/: escrow.rs  multisig.rs
contracts/tests/: basic_test_new.rs  escrow_core_test.rs  minimal_test.rs  multisig_tests.rs  refund_test.rs  swap_tests.rs
deployment/: addresses.json
src/: conversion.rs  email_to_wallet.rs  errors.rs  escrow.rs  event.rs  events.rs  fees.rs  index.ts  lib.rs  mint.rs  multisig.rs  nonce.rs  pool_manager.rs  rate_lock.rs  schema.rs  swap.rs  token.rs  utils.rs
test_snapshots/: test_add_liquidity.1.json  test_add_liquidity_above_maximum.1.json  test_add_liquidity_multiple_providers.1.json  test_add_liquidity_while_paused.1.json  test_admin_functions.1.json  test_btc_to_usd_conversion.1.json  test_can_dispute_functionality.1.json  test_conversion_insufficient_liquidity.1.json  test_create_escrow_success.1.json  test_different_fee_rates.1.json  test_duplicate_dispute_initiation.1.json  test_emergency_pause_and_resume.1.json  test_eth_to_usd_conversion.1.json  test_fee_calculation_accuracy.1.json  test_fee_distribution_across_multiple_conversions.1.json  test_fee_precision_with_small_amounts.1.json  test_gbp_to_usd_conversion.1.json  test_get_active_currencies.1.json  test_initialize_pool_manager.1.json  test_insufficient_balance_failure.1.json  test_nonce_tracker.1.json  (+23 more)
(+13 files in other folders)
