[package]
name = "stellar-multisig-contract"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = "22.0.7"

[dev-dependencies]
soroban-sdk = { version = "22.0.7", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[lib]
crate-type = ["cdylib", "rlib"]