[package]
name = "stellar-multisig-contract"
version = "0.1.0"
edition = "2021"

[dependencies]
heapless = "0.8.0"
soroban-sdk = "22.0.8"

[dev-dependencies]
soroban-sdk = { version = "22.0.8", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[lib]
crate-type = ["cdylib", "rlib"]