[package]
name = "stellar-multisig-contract"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = "20.0.0"
soroban-auth = "20.0.0"

[dev-dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[lib]
crate-type = ["cdylib"]